turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: value ! is not a member of Boolean
while(getCouleurSol()==colors(n)!){
                                ^